--- a/.gitignore
+++ b/.gitignore
@@ -27,12 +27,6 @@ mvnw.cmd
 # Log file
 *.log
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
 # Package Files #
 *.jar
 *.war
@@ -42,13 +36,33 @@ mvnw.cmd
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+### OS ###
+# Mac
+.DS_Store
+.AppleDouble
+.LSOverride
 
-### Spring Boot ###
-!**/src/main/**/target/
-!**/src/test/**/target/
+# Windows
+Thumbs.db
+ehthumbs.db
+[Dd]esktop.ini
+
+# Linux
+*~
+
+### Environment ###
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+### Logs ###
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 ### Application Properties ###
 # Ignore local application configuration files
@@ -56,3 +70,14 @@ application-local.properties
 application-local.yml
 application-dev.properties
 application-dev.yml
+
+# But keep the main application properties
+!application.properties
+!application.yml
+
+### Temporary Files ###
+*.tmp
+*.temp
+*.bak
+*.swp
+*~
