--- a/helpdesk/src/main/resources/application.properties
+++ b/helpdesk/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=helpdesk
-mongodb.connection.string=mongodb+srv://district-help-desk:Filwy514!@helpdesk-cluster.al0whe1.mongodb.net/?retryWrites=true&w=majority&appName=helpdesk-cluster
-mongodb.database.name=district-help-desk
+spring.data.mongodb.uri=mongodb+srv://district-help-desk:Filwy514!@helpdesk-cluster.al0whe1.mongodb.net/district-help-desk?retryWrites=true&w=majority&appName=helpdesk-cluster
 
 # Reduce MongoDB logging noise
 logging.level.org.mongodb.driver=WARN
